--- a/taskrail_client/src/components/Rail/Rail.css
+++ b/taskrail_client/src/components/Rail/Rail.css
@@ -1,7 +1,8 @@
 .task-rail {
   display: flex;
   flex-direction: row;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
+  padding-right: 30px;
 }
 .subtask-section {
   display: flex;
